--- a/MAXP 2021初赛数据探索和处理-2.ipynb
+++ b/MAXP 2021初赛数据探索和处理-2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# path\n",
-    "base_path = '/Users/jamezhan/PycharmProjects/MAXP/final_dataset'\n",
-    "publish_path = 'publish'\n",
+    "base_path = './dataset'\n",
+    "publish_path = ''\n",
     "\n",
     "diff_node_path = os.path.join(base_path, publish_path, 'diff_nodes.csv')\n",
     "train_nodes_path = os.path.join(base_path, publish_path, 'train_nodes.csv')\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "21"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "(3655452, 300)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,10 +216,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "7d6e9f8b297c76fb07a0d121ca94fd696bee4f63bd4011f44f51b92fd8c25d8a"
+  },
   "kernelspec": {
-   "display_name": "Python [conda env:dgl]",
-   "language": "python",
-   "name": "conda-env-dgl-py"
+   "display_name": "Python 3.7.11 64-bit ('env_pyg2': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -231,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
