--- a/MAXP 2021初赛数据探索和处理-3.ipynb
+++ b/MAXP 2021初赛数据探索和处理-3.ipynb
@@ -37,8 +37,8 @@
    "outputs": [],
    "source": [
     "# path\n",
-    "base_path = '/Users/jamezhan/PycharmProjects/MAXP/final_dataset'\n",
-    "publish_path = 'publish'\n",
+    "base_path = './dataset'\n",
+    "publish_path = ''\n",
     "\n",
     "link_p1_path = os.path.join(base_path, publish_path, 'link_phase1.csv')\n",
     "nodes_path = os.path.join(base_path, publish_path, 'IDandLabels.csv')"
@@ -140,6 +140,96 @@
     "nodes_df = pd.read_csv(nodes_path, dtype={'Label':str})\n",
     "print(nodes_df.shape)\n",
     "nodes_df.tail(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>node_idx</th>\n",
+       "      <th>paper_id</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>Split_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>bfdee5ab86ef5e68da974d48a138c28e</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>78f43b8b62f040347fec0be44e5f08bd</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>a971601a0286d2701aa5cde46e63a9fd</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>ac4b88a72146bae66cedfd1c13e1552d</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>a48c92cc8f67a8327adac7ff62d24a53</td>\n",
+       "      <td>W</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   node_idx                          paper_id Label  Split_ID\n",
+       "0         0  bfdee5ab86ef5e68da974d48a138c28e     S         0\n",
+       "1         1  78f43b8b62f040347fec0be44e5f08bd   NaN         0\n",
+       "2         2  a971601a0286d2701aa5cde46e63a9fd     G         0\n",
+       "3         3  ac4b88a72146bae66cedfd1c13e1552d   NaN         0\n",
+       "4         4  a48c92cc8f67a8327adac7ff62d24a53     W         0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes_df.head()"
    ]
   },
   {
@@ -396,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +563,7 @@
        "3  4bda690abec912b3b7b228b01fb6819a  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -543,10 +633,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "7d6e9f8b297c76fb07a0d121ca94fd696bee4f63bd4011f44f51b92fd8c25d8a"
+  },
   "kernelspec": {
-   "display_name": "Python [conda env:dgl]",
-   "language": "python",
-   "name": "conda-env-dgl-py"
+   "display_name": "Python 3.7.11 64-bit ('env_pyg2': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -558,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
