--- a/MAXP 2021初赛数据探索和处理-4.ipynb
+++ b/MAXP 2021初赛数据探索和处理-4.ipynb
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using backend: pytorch\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -30,8 +38,8 @@
    "outputs": [],
    "source": [
     "# path\n",
-    "base_path = '/Users/jamezhan/PycharmProjects/MAXP/final_dataset'\n",
-    "publish_path = 'publish'\n",
+    "base_path = './dataset'\n",
+    "publish_path = ''\n",
     "\n",
     "nodes_path = os.path.join(base_path, publish_path, 'IDandLabels.csv')"
    ]
@@ -143,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -358,7 +366,7 @@
        "W         13111     13111     13111"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +463,7 @@
        "3         3  ac4b88a72146bae66cedfd1c13e1552d   NaN         0     -1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +553,7 @@
        "3655451   3655451     -1         1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,10 +646,12 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "7d6e9f8b297c76fb07a0d121ca94fd696bee4f63bd4011f44f51b92fd8c25d8a"
+  },
   "kernelspec": {
-   "display_name": "Python [conda env:dgl]",
-   "language": "python",
-   "name": "conda-env-dgl-py"
+   "display_name": "Python 3.7.11 64-bit ('env_pyg2': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -653,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
