--- a/MAXP 2021初赛数据探索和处理-4.ipynb
+++ b/MAXP 2021初赛数据探索和处理-4.ipynb
@@ -514,6 +514,7 @@
        "      <th>node_idx</th>\n",
        "      <th>label</th>\n",
        "      <th>Split_ID</th>\n",
+       "      <th>paper_id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -522,35 +523,39 @@
        "      <td>3655448</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
+       "      <td>caed47d55d1e193ecb1fa97a415c13dd</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3655449</th>\n",
        "      <td>3655449</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
+       "      <td>c82eb6be79a245392fb626b9a7e1f246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3655450</th>\n",
        "      <td>3655450</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
+       "      <td>926a31f6b378575204aae30b5dfa6dd3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3655451</th>\n",
        "      <td>3655451</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
+       "      <td>bbace2419c3f827158ea4602f3eb35fa</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         node_idx  label  Split_ID\n",
-       "3655448   3655448     -1         1\n",
-       "3655449   3655449     -1         1\n",
-       "3655450   3655450     -1         1\n",
-       "3655451   3655451     -1         1"
+       "         node_idx  label  Split_ID                          paper_id\n",
+       "3655448   3655448     -1         1  caed47d55d1e193ecb1fa97a415c13dd\n",
+       "3655449   3655449     -1         1  c82eb6be79a245392fb626b9a7e1f246\n",
+       "3655450   3655450     -1         1  926a31f6b378575204aae30b5dfa6dd3\n",
+       "3655451   3655451     -1         1  bbace2419c3f827158ea4602f3eb35fa"
       ]
      },
      "execution_count": 6,
@@ -559,7 +564,7 @@
     }
    ],
    "source": [
-    "nodes = nodes_df[['node_idx', 'label', 'Split_ID']]\n",
+    "nodes = nodes_df[['node_idx', 'label', 'Split_ID', 'paper_id']]\n",
     "nodes.tail(4)"
    ]
   },
@@ -608,12 +613,164 @@
     "tr_labels_idx = tr_labels_idx[1: ]\n",
     "val_labels_idx = val_labels_idx[1: ]\n",
     "\n",
-    "test_labels_idx = test_label_df.node_idx.to_numpy()"
+    "test_labels_idx = test_label_df.node_idx.to_numpy()\n",
+    "test_paper_id = test_label_df.paper_id.to_numpy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3063061 3063062 3063063 ... 3655449 3655450 3655451]\n",
+      "['c39457cc34fa969b03819eaa4f9b7a52' '668b9d0c53e9b6e2c6b1093102f976b3'\n",
+      " 'ca5c7bc1b40c0ef3c3f864aed032ca90' ... 'c82eb6be79a245392fb626b9a7e1f246'\n",
+      " '926a31f6b378575204aae30b5dfa6dd3' 'bbace2419c3f827158ea4602f3eb35fa']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_labels_idx)\n",
+    "print(test_paper_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>node_idx</th>\n",
+       "      <th>label</th>\n",
+       "      <th>Split_ID</th>\n",
+       "      <th>paper_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3063061</th>\n",
+       "      <td>3063061</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>c39457cc34fa969b03819eaa4f9b7a52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3063062</th>\n",
+       "      <td>3063062</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>668b9d0c53e9b6e2c6b1093102f976b3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3063063</th>\n",
+       "      <td>3063063</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ca5c7bc1b40c0ef3c3f864aed032ca90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3063064</th>\n",
+       "      <td>3063064</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44f810c0c000cda27ce618add55e815f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3063065</th>\n",
+       "      <td>3063065</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3c206335d88637d36d83c2942586be98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         node_idx  label  Split_ID                          paper_id\n",
+       "3063061   3063061     -1         1  c39457cc34fa969b03819eaa4f9b7a52\n",
+       "3063062   3063062     -1         1  668b9d0c53e9b6e2c6b1093102f976b3\n",
+       "3063063   3063063     -1         1  ca5c7bc1b40c0ef3c3f864aed032ca90\n",
+       "3063064   3063064     -1         1  44f810c0c000cda27ce618add55e815f\n",
+       "3063065   3063065     -1         1  3c206335d88637d36d83c2942586be98"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_label_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c39457cc34fa969b03819eaa4f9b7a52'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_label_df['paper_id'].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c39457cc34fa969b03819eaa4f9b7a52\n",
+      "592391\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_id_dict = {idx: test_paper_id[i] for i, idx in enumerate(test_labels_idx)}\n",
+    "print(test_id_dict[3063061])\n",
+    "print(len(test_id_dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,6 +792,17 @@
     "                 'val_label_idx': val_labels_idx, \n",
     "                 'test_label_idx': test_labels_idx,\n",
     "                 'label': labels}, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_path = os.path.join(base_path, publish_path, 'test_id_dict.pkl')\n",
+    "with open(dict_path, 'wb') as f:\n",
+    "    pickle.dump(test_id_dict, f)"
    ]
   },
   {
